cargo-features = ["edition2024"]

[package]
name = "sv_manage"
version = "0.1.0"
edition = "2024"

[dependencies]
ende = { git = "https://github.com/bohdloss/ende", features = ["all", "debug"] }
file-guard = "0.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
anyhow = "1.0.86"
expanduser = "1.2.2"
parse-display = "0.9.1"
atomic = "0.6.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
openssl = "0.10.64"
cryptostream = "0.3.2"
yapper = { path = "../yapper" }
java-properties = "2.0.0"
mc-rcon = "0.1.0"
fs_extra = "1.3.0"