[package]
name = "yapper"
version = "0.1.0"
edition = "2021"

[dependencies]
ende = { git = "https://github.com/bohdloss/ende", features = ["all"] }
serde = { version = "1.0.203", features = ["derive"] }
parse-display = "0.9.1"
openssl = "0.10.64"
anyhow = "1.0.86"
sha2 = "0.10.8"
bytemuck = { version = "1.16.1", features = ["derive"] }
serde_json = "1.0.119"